# openguardrails-safety

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  supervisord.conf
.github/workflows/: docker-release.yml
backend/: .env.example  .env.local.example  Dockerfile  admin_service.py  config.py  detection_service.py  entrypoint.sh  proxy_service.py  requirements.txt  start_admin_service.py  start_all_services.sh  stop_all_services.sh  supervisor-entrypoint.sh
backend/database/: connection.py  models.py
backend/i18n/: en.json  zh.json
backend/middleware/: billing_middleware.py  rate_limit_middleware.py
backend/migrations/: 008_add_billing_system.py  009_fix_risk_level_column_length.py  README.md  (+15 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CUSTOM_SCANNERS.md  DATA_LEAKAGE_GUIDE.md  DEPLOYMENT.md  DLP_SYSTEM_DESIGN.md  ENTERPRISE_POC.md  FRONTEND_MIGRATION_PROGRESS.md  POLICY_MODEL.md  SYSLOG_INTEGRATION.md  THIRD_PARTY_GATEWAY_INTEGRATION.md
frontend/: index.html  nginx-standalone.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
integrations/og-connector-higress/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  plugin.wasm
integrations/og-connector-higress/src/: lib.rs  og_connector.rs
landing/: index.html
scripts/: quick_start.sh  release.sh  restart_docker.sh  start.sh  stop.sh
standards/: OG-AI-RSMS-001.md  README.md  iso-style.tex  title-page.tex
(+339 files in other folders)
