[package]
name = "og-connector-higress"
version = "1.0.24"
edition = "2021"
publish = false
description = "OpenGuardrails Connector Plugin for Higress - integrates full OG security capabilities including prompt attack detection, content safety, and data leakage prevention with anonymization restore."
authors = ["OpenGuardrails <thomas@openguardrails.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use proxy-wasm directly to avoid redis dependency issue
proxy-wasm = { git = "https://github.com/higress-group/proxy-wasm-rust-sdk", branch = "main", version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1"
log = "0.4"

[profile.release]
lto = true
opt-level = "s"
